welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:13: error: Unit does not take parameters
remplirTableau()
              ^